examples/test/testpolicy4493.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4493
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key12: value9
      key49: value12
      key34: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value9
      podSelector:
        matchLabels:
          key19: value15
          key8: value16
